--- a/workHours/web/bower.json
+++ b/workHours/web/bower.json
@@ -16,8 +16,7 @@
     "alertify.js": "alertifyjs#^1.0.9",
     "moment": "^2.11.2",
     "bootstrap-select": "^1.10.0",
-    "moment-timezone": "^0.5.0",
-    "chartist": "^0.9.7"
+    "moment-timezone": "^0.5.0"
   },
   "resolutions": {
     "angular": "^1.0.8"
