--- a/workHours/web/aurelia/package.json
+++ b/workHours/web/aurelia/package.json
@@ -12,7 +12,7 @@
     "aurelia-animator-css": "^1.0.0",
     "aurelia-bootstrapper": "^1.0.0",
     "aurelia-fetch-client": "^1.0.0",
-    "aurelia-materialize-bridge": "0.18.0",
+    "aurelia-materialize-bridge": "^0.19.0",
     "aurelia-validation": "^0.13.1",
     "bluebird": "^3.4.1",
     "material-datetime-picker": "https://github.com/Pako7/material-datetime-picker",
@@ -22,7 +22,7 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "aurelia-cli": "^0.21.0",
+    "aurelia-cli": "0.22.0",
     "aurelia-testing": "^1.0.0-beta.2.0.0",
     "aurelia-tools": "^0.2.2",
     "babel-eslint": "^6.0.4",
