--- a/workHours/web/aurelia/package.json
+++ b/workHours/web/aurelia/package.json
@@ -18,6 +18,7 @@
     "material-datetime-picker": "https://github.com/Pako7/material-datetime-picker",
     "materialize-css": "0.97.8",
     "moment": "2.14.1",
+    "numeral": "^1.5.6",
     "wakanda-client": "0.3.5"
   },
   "peerDependencies": {},
