--- a/workHours/web/aurelia/package.json
+++ b/workHours/web/aurelia/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WorktTime",
+  "name": "aurelia",
   "description": "An application to enter and get report of worktime",
   "version": "2.3.0",
   "repository": {
@@ -12,8 +12,8 @@
     "aurelia-animator-css": "^1.0.0",
     "aurelia-bootstrapper": "^1.0.0",
     "aurelia-fetch-client": "^1.0.0",
-    "aurelia-materialize-bridge": "^0.19.0",
-    "aurelia-validation": "^0.13.1",
+    "aurelia-materialize-bridge": "^0.20.0",
+    "aurelia-validation": "^1.0.0-beta.1.0.0",
     "bluebird": "^3.4.1",
     "material-datetime-picker": "https://github.com/Pako7/material-datetime-picker",
     "materialize-css": "0.97.8",
