ignore files for prod

--- a/workHours/web/.gitignore
+++ b/workHours/web/.gitignore
@@ -1,3 +1,18 @@
 node_modules
 .idea
 .DS_STORE
+.tern-project
+.babelrc
+.eslintrc.json
+.editorconfig
+
+materialize-css.js
+rbuild.js
+yarn.lock
+
+aurelia-project/
+
+scripts/app-bundle.js.map
+
+src/*
+!src/styles/
